--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
     "description": "",
     "main": "index.html",
     "scripts": {
+        "start": "concurrently \"gulp\" \"json-server -p 7777 -w db.json\"",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "concurrently": "^7.6.0",
         "gulp": "^4.0.2",
         "gulp-autoprefixer": "^8.0.0",
         "gulp-clean-css": "^4.3.0",
         "gulp-concat": "^2.6.1",
         "gulp-sass": "^5.1.0",
+        "json-server": "^0.17.1",
         "node-sass": "^7.0.3",
         "sass": "^1.55.0"
     }
